<resources>
    <string name="app_name">PATRIOT</string>
    <string name="have_account">Register an Account?</string>


    <string name="scan_setting">customised scanning</string>
    <string name="setting_name">setting name</string>
    <string name="setting_mac">setting mac</string>
    <string name="setting_uuid">setting uuid</string>
    <string name="connect_fail">Connect encountered some problem</string>
    <string name="active_disconnected">active disconnected</string>
    <string name="disconnected">disconnected</string>

    <string name="connect">connect</string>
    <string name="connected">connected</string>
    <string name="disconnect">disconnect</string>
    <string name="enter">enter</string>
    <string name="start_scan">Find Patriot</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="please_open_blue">TurnOn Bluetooth</string>

    <string name="notifyTitle">Notify Title</string>
    <string name="gpsNotifyMsg">gpsNotifyMsg</string>
    <string name="setting">setting</string>
    <string name="cancel">cancel</string>

    <string name="expand_search_settings">expand search settings</string>
    <string name="retrieve_search_settings">retrieve search settings</string>
    <string name="todo">TODO</string>
    <string name="back_to_login">Back to login</string>
    <string name="myapp">MyApp</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="logout">logout</string>
    <string name="gmail">Gmail</string>
    <string name="none">None</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="ON">Stablizer ON</string>
    <string name="OFF">Stablizer OFF</string>
</resources>
